// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton creates correct snapshot for danger styled button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium IconButton-buttonDanger-5 css-4dagr2-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    buttonText
    <span
      aria-hidden="true"
      class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium IconButton-icon-6 css-kp9ftd-MuiIcon-root"
    >
      store
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`IconButton creates correct snapshot for required props 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium IconButton-button-1 css-4dagr2-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    buttonText
    <span
      aria-hidden="true"
      class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium IconButton-icon-3 css-kp9ftd-MuiIcon-root"
    >
      store
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;
